# tensor_planner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh
cmake/: tensor_plannerConfig.cmake.in
csharp/: TensorPlanner.sln
csharp/TensorPlanner/: TensorPlanner.csproj
csharp/TensorPlanner.Smoke/: Program.cs  TensorPlanner.Smoke.csproj
dev.nick.tensor-planner/: package.json
dev.nick.tensor-planner/Runtime/: TensorPlanner.asmdef  TensorPlanner.cs
dev.nick.tensor-planner/Samples~/Basic Usage/: BasicUsage.cs
dev.nick.tensor-planner/Samples~/Tower of Hanoi/: HanoiTower.cs
docs/wiki/: C-API.md  CSharp-and-Unity.md  Core-Concepts.md  Cpp-Fluent-API.md  Examples.md  FAQ-and-Limitations.md  Getting-Started.md  Home.md  How-the-Planner-Works.md  Jai-Bindings.md  Memory-Ownership.md  Packaging.md
examples/: capra_benchmark.cpp  crafting_benchmark.cpp  large_capra_example.cpp  logistics_benchmark.cpp  runtime_solver_example.cpp  runtime_solver_example.jai
examples/.build/: .added_strings_w2.jai
include/: tensor_planner.h  tensor_planner.hpp
modules/Tensor_Planner/: builder.jai  generate.jai  module.jai  platform.jai  runtime.jai  schema_spec.jai  status.jai
modules/Tensor_Planner/.build/: .added_strings_w2.jai
modules/Tensor_Planner/tests/: crafting.jai  crafting_guidance_experiment.jai  numeric.jai
scripts/: New-NuGetPackage.ps1  New-UnityPackage.ps1  benchmark_pddl_planners.py
src/: api.cpp  domain.cpp  planner_internal.hpp  search.cpp  state.cpp
tests/: cpp_fluent_smoke.cpp  crafting_guidance_experiment.cpp  crafting_pddl_experiment.cpp  crafting_smoke.cpp  guidance_experiment.cpp  logistics_smoke.cpp  reduced_task_filtering_smoke.cpp  solver_smoke.cpp
unreal/TensorPlanner/: README.md  TensorPlanner.uplugin
unreal/TensorPlanner/Source/TensorPlanner/: TensorPlanner.Build.cs
unreal/TensorPlanner/Source/TensorPlanner/Private/: TensorPlannerModule.cpp  TensorPlannerPlanComponent.cpp
unreal/TensorPlanner/Source/TensorPlanner/Private/AI/: BTService_TensorPlannerPlanState.cpp  BTTask_TensorPlannerAdvancePlan.cpp  BTTask_TensorPlannerExecuteCurrentStep.cpp  BTTask_TensorPlannerMoveToCurrentStepTarget.cpp  BTTask_TensorPlannerRequestExampleNavigationPlan.cpp  BTTask_TensorPlannerRequestExamplePlan.cpp  TensorPlannerAIHelpers.h
unreal/TensorPlanner/Source/TensorPlanner/Public/: TensorPlannerModule.h  TensorPlannerPlanComponent.h  TensorPlannerUnreal.h
unreal/TensorPlanner/Source/TensorPlanner/Public/AI/: BTService_TensorPlannerPlanState.h  BTTask_TensorPlannerAdvancePlan.h  BTTask_TensorPlannerExecuteCurrentStep.h  BTTask_TensorPlannerMoveToCurrentStepTarget.h  BTTask_TensorPlannerRequestExampleNavigationPlan.h  BTTask_TensorPlannerRequestExamplePlan.h
